--- a/index.html
+++ b/index.html
@@ -171,7 +171,7 @@ and open the template in the editor.
                         </div>
                     </div>
                 </div>
-            <div class="col-md-6 col-lg-12 " style="float: left">
+            <div class="col-md-6 col-sm-12 " style="float: left">
                     <div class="thumbnail">
                         <img class="bimg2 img-responsive" src="vid/8.png" alt="1" id="8">
                         <div class="btext">
