--- a/index.html
+++ b/index.html
@@ -315,7 +315,7 @@ var countdown2function = setInterval(function() {
   // If the count down is over, write some text 
   if (distance < 0) {
     clearInterval(countdown2function);
-    document.getElementById("t2").innerHTML = 'To the participate the event <br><br> ' + '<a href="https://forms.gle/m1zJv7rwVAsW6BoR8"><button class="button">Click me!!</button></a> ';
+    document.getElementById("t2").innerHTML = 'To the participate the event <br><br> ' + '<a href="https://tinyurl.com/yy8jm2yr"><button class="button">Click me!!</button></a> ';
     $("#2").removeClass('bimg2');
     $("#2").addClass('bimg1');
   }
