--- a/index.html
+++ b/index.html
@@ -348,7 +348,7 @@ var countdown3function = setInterval(function() {
   // If the count down is over, write some text 
   if (distance < 0) {
     clearInterval(countdown3function);
-    document.getElementById("t3").innerHTML = 'To the participate the event <br><br> ' + '<a href="https://forms.gle/R7U18Hvgywnd4Rd68"><button class="button">Click me!!</button></a> ';
+    document.getElementById("t3").innerHTML = 'To the participate the event <br><br> ' + '<a href="https://tinyurl.com/yy9pamve"><button class="button">Click me!!</button></a> ';
     $("#3").removeClass('bimg2');
     $("#3").addClass('bimg1');
   }
