--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@ and open the template in the editor.
             <div class="row">
             <div class="col-md-6 col-sm-12" style="float: left">
                     <div class="thumbnail">
-                        <img class="bimg2 img-responsive" src="vid/3.png" alt="1" id="3">
+                        <img class="bimg2 img-responsive" src="vid/3.jpeg" alt="1" id="3">
                         <div class="btext">
                             <h2>Day3 (05-08-2020)</h2>
                            
