--- a/index.html
+++ b/index.html
@@ -382,7 +382,7 @@ var countdown4function = setInterval(function() {
   // If the count down is over, write some text 
   if (distance < 0) {
     clearInterval(countdown4function);
-    document.getElementById("t4").innerHTML = 'To the participate the event <br><br> ' + '<a href="https://forms.gle/dqhz1mHSiRtTp1xw8"><button class="button">Click me!!</button></a> ';
+    document.getElementById("t4").innerHTML = 'To the participate the event <br><br> ' + '<a href="https://tinyurl.com/y6crp7r8"><button class="button">Click me!!</button></a> ';
     $("#4").removeClass('bimg2');
     $("#4").addClass('bimg1');
   }
