--- a/index.html
+++ b/index.html
@@ -416,7 +416,7 @@ var countdown5function = setInterval(function() {
   // If the count down is over, write some text 
   if (distance < 0) {
     clearInterval(countdown5function);
-    document.getElementById("t5").innerHTML = 'To the participate the event <br><br> ' + '<a href="https://forms.gle/KHNZTY38GqH1WpGa7"><button class="button">Click me!!</button></a> ';
+    document.getElementById("t5").innerHTML = 'To the participate the event <br><br> ' + '<a href="https://tinyurl.com/y3phfase"><button class="button">Click me!!</button></a> ';
     $("#5").removeClass('bimg2');
     $("#5").addClass('bimg1');
   }
