--- a/index.html
+++ b/index.html
@@ -450,7 +450,7 @@ var countdown6function = setInterval(function() {
   // If the count down is over, write some text 
   if (distance < 0) {
     clearInterval(countdown6function);
-    document.getElementById("t6").innerHTML = 'To the participate the event <br><br> ' + '<a href="https://forms.gle/AEpjEmS28iKuun67A"><button class="button">Click me!!</button></a> ';
+    document.getElementById("t6").innerHTML = 'To the participate the event <br><br> ' + '<a href="https://tinyurl.com/y24t5sln"><button class="button">Click me!!</button></a> ';
     $("#6").removeClass('bimg2');
     $("#6").addClass('bimg1');
   }
