--- a/index.html
+++ b/index.html
@@ -484,7 +484,7 @@ var countdown7function = setInterval(function() {
   // If the count down is over, write some text 
   if (distance < 0) {
     clearInterval(countdown7function);
-    document.getElementById("t7").innerHTML = 'To the participate the event <br><br> ' + '<a href="https://forms.gle/pBQ8ZEgsUWbVps8L8"><button class="button">Click me!!</button></a> ';
+    document.getElementById("t7").innerHTML = 'To the participate the event <br><br> ' + '<a href="https://tinyurl.com/y367yuzf"><button class="button">Click me!!</button></a> ';
     $("#7").removeClass('bimg2');
     $("#7").addClass('bimg1');
   }
